# ml_challenges

./: .gitignore  Makefile  PARALLEL_IMPL_PLAN.md  README.md  SETUP_COMPLETE_GUIDE.md  docker-compose.monitoring.yml  pixi.toml  pytest.ini
.serena/: project.yml
config/: machines.yml  prometheus.yml
docs/: ADVANCED_42DAY_CHALLENGE_PLAN.md  API.md  DELIVERY_SUMMARY.md  (+5 more)
projects/gpu_optimizer/: API_USAGE_GUIDE.md  MEMORY_TRACER_README.md  baseline_memory_profiler.py  pyproject.toml
projects/gpu_optimizer/api/: __init__.py  main.py  routes.py  schemas.py
projects/gpu_optimizer/examples/: benchmark_checkpointing.py  benchmark_integrated.py  benchmark_swapper.py  memory_tracer_demo.py
projects/gpu_optimizer/src/gpu_optimizer/: __init__.py  checkpoint_manager.py  cost_model.py  fragmentation_solver.py  memory_profiler.py  memory_tracer.py  tensor_swapper.py
projects/gpu_optimizer/tests/: test_api_integration.py  test_basic.py  test_memory_tracer.py
projects/pose_analyzer/: BIOMECHANICS_DEMO.md  INTEGRATION_COMPLETE.md  pyproject.toml  test_integration.py  validate_biomechanics.py  validate_integration.py
projects/pose_analyzer/api/: __init__.py  main.py  routes.py  schemas.py
projects/pose_analyzer/data/validation/: labeled_squats.npz
projects/pose_analyzer/reports/: form_scoring_validation.md
projects/pose_analyzer/scripts/: profile_pose_detector.py  run_detector_benchmark.py  validate_anomaly_detection.py
projects/pose_analyzer/src/pose_analyzer/: __init__.py  ab_testing.py  benchmark.py  biomechanics.py  concurrent_stream_processor.py  form_anomaly_detector.py  form_scorer.py  performance_tests.py  pose_detector.py  synthetic_poses.py  temporal_analyzer.py  validation_framework.py  video_processor.py  yolo_detector.py
projects/pose_analyzer/src/pose_analyzer/tests/: test_biomechanics.py
projects/pose_analyzer/tests/: test_biomechanics_fix.py  test_form_anomaly_detector.py  test_form_anomaly_detector_fix.py  test_form_scorer.py  test_form_scorer_performance.py  test_joint_angles.py  test_pose_analyzer_basic.py
projects/shared_utils/: __init__.py  pyproject.toml  setup.cfg  setup.cfg`  setup.py
projects/shared_utils/src/shared_utils/: metrics.py
(+106 files in other folders)
