[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-optimizer"
version = "0.1.0"
description = "GPU VRAM optimization suite with tensor management"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "email@example.com" },
]

dependencies = [
    "nvidia-ml-py>=12.535.0",
    "numpy>=1.26,<1.27",
    "fastapi>=0.115.0",
    "prometheus-client>=0.21,<0.25",
    "pydantic>=2.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
