[metadata]
name = shared-utils
version = 0.1.0
description = Shared utilities for ai-ml-pipeline
author = Ollie
author_email = buitelaarolivier@gmail.com
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
